--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,3 +5,23 @@ body,
     margin: 0;
     padding: 0;
 }
+
+/*导航记录为全局样式*/
+.el-breadcrumb {
+    margin-bottom: 17px;
+    font-size: 12px;
+}
+
+/*全局卡片样式*/
+.el-card {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2) !important;
+}
+
+.el-table {
+    margin-top: 17px;
+    font-size: 13px;
+}
+
+.el-pagination {
+    margin-top: 15px;
+}
