--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -31,3 +31,16 @@ body,
 .el-cascader-panel {
     height: 300px;
 }
+
+.el-steps {
+    margin: 15px 0;
+    width: 100%;
+}
+
+.el-step__title {
+    font-size: 13px;
+}
+
+.ql-editor {
+    min-height: 300px;
+}
